Got complete build working with .deb build

--- a/angular/src/app/configuration.component.html
+++ b/angular/src/app/configuration.component.html
@@ -108,7 +108,7 @@
       <h3>Switches</h3>
       <div>
         <input type="text" formControlName="GenericSwitchName1" [zeidonErrorElement]="switchError" placeholder="Switch name" />
-        <input type="checkbox" formControlName="GeneriecSwitch1" [zeidonErrorElement]="switchError" />
+        <input type="checkbox" formControlName="GenericSwitch1" [zeidonErrorElement]="switchError" />
       </div>
       <div #switchError class="alert alert-danger" style="display:none"></div>
 
