--- a/angular9/src/app/app.component.html
+++ b/angular9/src/app/app.component.html
@@ -1,8 +1,11 @@
 <h1>{{title}}</h1>
-<!-- <nav>
+<nav class="navbar navbar-fixed-top">
+    <div class="container">
+
     <a routerLink="/configlist" routerLinkActive="active">Configurations</a>
-    <a routerLink="/session" routerLinkActive="active">Session</a>
-    <a routerLink="/history" routerLinkActive="active">History</a>
+    <!-- <a routerLink="/session" routerLinkActive="active">Session</a>
+    <a routerLink="/history" routerLinkActive="active">History</a> -->
     <a routerLink="/utc" routerLinkActive="active">UTC</a>
-</nav> -->
+    </div>
+</nav>
 <router-outlet></router-outlet>
