Added session and history-detail

--- a/angular9/src/app/app.component.html
+++ b/angular9/src/app/app.component.html
@@ -3,7 +3,7 @@
     <div class="container">
 
     <a routerLink="/configlist" routerLinkActive="active">Configurations</a>
-    <!-- <a routerLink="/session" routerLinkActive="active">Session</a> -->
+    <a routerLink="/session" routerLinkActive="active">Session</a>
     <a routerLink="/history" routerLinkActive="active">History</a>
     <a routerLink="/utc" routerLinkActive="active">UTC</a>
     </div>
