--- a/angular9/src/app/history/history.component.html
+++ b/angular9/src/app/history/history.component.html
@@ -10,6 +10,6 @@
     </ul>
 </div>
 <div *ngIf="selectedSessionOi">
-    <history-detail [sessionOi]="selectedSessionOi">
-    </history-detail>
+    <app-history-detail [sessionOi]="selectedSessionOi">
+    </app-history-detail>
 </div>
