--- a/angular9/src/app/configuration-list/configuration-list.component.html
+++ b/angular9/src/app/configuration-list/configuration-list.component.html
@@ -2,19 +2,35 @@
     Session is running!
 </div>
 <div *ngIf="configurationList && configurationList.isEmpty == false">
-    <ul class="configurations">
-        <li *ngFor="let config of configurationList.Configuration"
-            [class.selected]="selectedConfigOi && selectedConfigOi.Configuration$.Id == config.Id">
-            <span (click)="onSelect(config)">
-                <span class="badge">{{config.Id}}</span> {{config.Description}}
-            </span>
-            <img src="assets/img/red-x.png" (click)="onDelete( config )" />
-        </li>
-    </ul>
+
+    <table mat-table [dataSource]="configurationList.Configuration">
+
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef> ID </th>
+            <td mat-cell *matCellDef="let config" (click)="onSelect(config)">{{config.Id}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="description">
+            <th mat-header-cell *matHeaderCellDef> Description </th>
+            <td mat-cell *matCellDef="let config" (click)="onSelect(config)"> {{config.Description}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="delete">
+            <th mat-header-cell *matHeaderCellDef> Delete? </th>
+            <td mat-cell *matCellDef="let config">
+                <img src="assets/img/red-x.png" (click)="onDelete( config )" />
+             </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
 </div>
+
 <button type="button" class="btn btn-default" (click)="newConfiguration()">
     New Configuration
 </button>
+
 <div *ngIf="selectedConfigOi">
     <configuration-detail [configOi]="selectedConfigOi" [configurationList]="configurationList"
         (onSessionStarted)="onSessionStarted($event)">
