--- a/angular9/src/app/configuration-list/configuration-list.component.html
+++ b/angular9/src/app/configuration-list/configuration-list.component.html
@@ -3,27 +3,19 @@
 </div>
 <div *ngIf="configurationList && configurationList.isEmpty == false">
 
-    <table mat-table [dataSource]="configurationList.Configuration">
-
-        <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef> ID </th>
-            <td mat-cell *matCellDef="let config" (click)="onSelect(config)">{{config.Id}}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="description">
-            <th mat-header-cell *matHeaderCellDef> Description </th>
-            <td mat-cell *matCellDef="let config" (click)="onSelect(config)"> {{config.Description}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="delete">
-            <th mat-header-cell *matHeaderCellDef> Delete? </th>
-            <td mat-cell *matCellDef="let config">
-                <img src="assets/img/red-x.png" (click)="onDelete( config )" />
-             </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <table>
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Description</th>
+                <th>Delete?</th>
+            </tr>
+        </thead>
+        <tr *ngFor="let config of configurationList.Configuration">
+            <td (click)="onSelect(config)">{{ config.Id}}</td>
+            <td (click)="onSelect(config)">{{ config.Description }}</td>
+            <td><img src="assets/img/red-x.png" (click)="onDelete( config )" /></td>
+        </tr>
     </table>
 </div>
 
